--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">GreenWalk</string>
+    <string name="text_home">Home</string>
+    <string name="text_market">Market</string>
+    <string name="text_newsfeed">Newsfeed</string>
+    <string name="text_mypage">Mypage</string>
 </resources>
